# cmake-example

./: CMakeLists.txt  Makefile  build.sh
src/: CMakeLists.txt  bar.cpp  cpack.cmake  foo.cpp  hello.cpp
